syntax = "proto3";

option csharp_namespace = "AdvancedGrpcService.Protos";

enum Title {
	Nothing = 0;
	Prof=1;
	Dr=2;
}

message CustomerModel {
	string id=1;
	Title title=2;
	string firstName=3;
	string lastName=4;
	string birthday=5;
}

message NewCustomerModel {
	Title title=2;
	string firstName=3;
	string lastName=4;
	string birthday=5;
}




/////
